--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Lab 3 - Basic HTML</title>
+    <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
 
@@ -54,3 +55,4 @@
 
 </body>
 </html>
+
