--- a/index.html
+++ b/index.html
@@ -1,58 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Lab 3 - Basic HTML</title>
-    <link rel="stylesheet" href="mystyle.css">
-</head>
-<body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ThreadCycle - Fashion Without Waste</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="nav-container">
+          <div class="logo">
+            <h1>ThreadCycle</h1>
+          </div>
+          <ul class="nav-menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="issue.html">The Issue</a></li>
+            <li><a href="action.html">Take Action</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="top10.html">Top 10</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
-    <!-- Exercise 1 & 2: Structure and Paragraph -->
-    <h1>Welcome to My Lab 3 Webpage</h1>
-    <p style="color:DodgerBlue;">
-        Hi! I'm Finley, and this is my first basic HTML page. I'm learning how to structure
-        webpages using HTML tags like headings, paragraphs, lists, images, and forms.
-    </p>
+    <main>
+      <section class="hero">
+        <div class="hero-content">
+          <h2>Fashion Without Waste</h2>
+          <p class="hero-subtitle">Rewear, Reuse, Rethink</p>
+          <p>
+            Join the movement towards sustainable fashion. Every thread counts
+            in creating a better future for our planet.
+          </p>
+          <div class="hero-buttons">
+            <a href="action.html" class="btn btn-primary">Take Action</a>
+            <a href="about.html" class="btn btn-secondary">Learn More</a>
+          </div>
+        </div>
+        <div class="hero-image">
+          <div class="clothes-pile"></div>
+        </div>
+      </section>
 
-    <h2>About This Page</h2>
-    <p>
-        This page demonstrates some basic HTML elements:
-        <strong>headings</strong>, <em>paragraphs</em>, <strong>lists</strong>, <em>links</em>,
-        <strong>images</strong>, and a <em>form</em>.
-    </p>
+      <section class="stats">
+        <div class="container">
+          <h3>The Impact of Fast Fashion</h3>
+          <div class="stats-grid">
+            <div class="stat-card">
+              <h4>2,700L</h4>
+              <p>Water needed for one cotton t-shirt</p>
+            </div>
+            <div class="stat-card">
+              <h4>92M tons</h4>
+              <p>Textile waste produced annually</p>
+            </div>
+            <div class="stat-card">
+              <h4>10%</h4>
+              <p>Of global carbon emissions from fashion</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
-    <!-- Exercise 3: Lists and Links -->
-    <h2>My Favorite Websites</h2>
-    <ul>
-        <li><a href="https://www.rarebeauty.com" target="_blank">Google</a></li>
-        <li><a href="https://www.wikipedia.org" target="_blank">Wikipedia</a></li>
-        <li><a href="https://www.github.com" target="_blank">GitHub</a></li>
-    </ul>
+      <section class="actions-preview">
+        <div class="container">
+          <h3>Simple Ways to Make a Difference</h3>
+          <div class="actions-grid">
+            <div class="action-card">
+              <h4>🔄 Thrift & Swap</h4>
+              <p>Give pre-loved clothes a new life</p>
+            </div>
+            <div class="action-card">
+              <h4>🪡 Repair & Upcycle</h4>
+              <p>Fix what you have, create something new</p>
+            </div>
+            <div class="action-card">
+              <h4>Choose Sustainable</h4>
+              <p>Support ethical fashion brands</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
-    <h2>My Top 3 Hobbies</h2>
-    <ol>
-        <li>playing with my dog</li>
-        <li>going on hikes</li>
-        <li>shopping</li>
-    </ol>
-
-    <!-- Exercise 4: Image -->
-    <h2>My Favorite Image</h2>
-    <img src="pexels-adi-k-182036-2382868.jpg" alt="Beautiful Vancouver" width="400" height="300" />
-
-    <!-- Exercise 5: Simple Form -->
-    <h2>Contact Me</h2>
-    <form action="#" method="post">
-        <label for="name">Name:</label><br />
-        <input type="text" id="name" name="name" required /><br /><br />
-
-        <label for="email">Email:</label><br />
-        <input type="email" id="email" name="email" required /><br /><br />
-
-        <button type="submit">Submit</button>
-    </form>
-
-</body>
+    <footer>
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-section">
+            <h4>ThreadCycle</h4>
+            <p>Building a sustainable fashion future, one thread at a time.</p>
+          </div>
+          <div class="footer-section">
+            <h4>Quick Links</h4>
+            <ul>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="issue.html">The Issue</a></li>
+              <li><a href="resources.html">Resources</a></li>
+            </ul>
+          </div>
+          <div class="footer-section">
+            <h4>Get Involved</h4>
+            <ul>
+              <li><a href="action.html">Take Action</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2024 ThreadCycle. Fashion Without Waste.</p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
-
