--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,7 @@
 </script>
  
 <!-- Your logic -->
-<script src="./assets/contact.js"></script>
+<script src="/assets/contact.js"></script>
  
  
   </body>
